<resources>
    <string name="app_name">CoinCounterDN</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="instructions_banner">Please enter in the coin count:</string>
    <string name="penny">Penny</string>
    <string name="nickel">Nickel</string>
    <string name="dime">Dime</string>
    <string name="quarter">Quarter</string>
    <string name="numberHint">0</string>
    <string name="name">Devora Nagel</string>
    <string name="total">Total in cents: </string>
    <string name="clear_all">Clear All</string>
    <string name="about">About</string>
    <string name="about_text">Coin Counter application created by\nDevora Nagel for the MCON 521 Final Exam</string>
</resources>