<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <include layout="@layout/main_include_banner" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/penny_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:layout_constraintEnd_toStartOf="@id/nickel_card"
        app:layout_constraintStart_toStartOf="@+id/instructions_banner"
        app:layout_constraintTop_toBottomOf="@+id/instructions_banner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/penny"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/penny"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/penny" />

            <EditText
                android:id="@+id/et_penny"
                style="@style/EditTextStyle"
                android:hint="@string/numberHint" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nickel_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:layout_constraintEnd_toStartOf="@id/guide"
        app:layout_constraintStart_toEndOf="@id/penny_card"
        app:layout_constraintTop_toBottomOf="@id/instructions_banner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nickel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/nickel"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/nickel" />

            <EditText
                android:id="@+id/et_nickel"
                style="@style/EditTextStyle"
                android:hint="@string/numberHint" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dime_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:layout_constraintEnd_toStartOf="@id/quarter_card"
        app:layout_constraintStart_toEndOf="@id/guide"
        app:layout_constraintTop_toBottomOf="@id/instructions_banner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/dime"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/dime" />

            <EditText
                android:id="@+id/et_dime"
                style="@style/EditTextStyle"
                android:hint="@string/numberHint" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/quarter_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:layout_constraintEnd_toEndOf="@id/instructions_banner"
        app:layout_constraintStart_toEndOf="@id/dime_card"
        app:layout_constraintTop_toBottomOf="@id/instructions_banner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/quarter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/quarter"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/quarter" />

            <EditText
                android:id="@+id/et_quarter"
                style="@style/EditTextStyle"
                android:hint="@string/numberHint" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>